Vistas Signin y Signup

--- a/src/views/comingsoon.html
+++ b/src/views/comingsoon.html
@@ -11,7 +11,7 @@
         <div class="card">
             <div class="card-body">
               <h5 class="card-title mt-2">Nós vemos pronto</h5>
-              <img src="/img/logo_nuevo.png" class="mb-2 mt-2" alt="">
+              <a href="/"><img src="/img/logo_nuevo.png" class="mb-2 mt-2" alt=""></a>
                 <div id="fecha" class="mb-3 mt-3">
                     <div>
                         <span id="Dia" class="DT"></span>
