--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,10 +13,10 @@
                 <div class="col-md-12">
                     <ul class="link_menu">
                         <li><a href="/">Uluhlu</a></li>
-                        <li><a href="javascript:void(0)">Precios</a></li>
-                        <li><a href="javascript:void(0)">Blog</a></li>
-                        <li><a href="javascript:void(0)">Más</a></li>
-                        <li><a href="/comingsoon">Ingresar</a></li>
+                        <li><a href="/comingsoon">Precios</a></li>
+                        <li><a href="/comingsoon">Blog</a></li>
+                        <li><a href="/comingsoon">Más</a></li>
+                        <li><a href="/users/signin">Ingresar</a></li>
                     </ul>
                 </div>
             </div>
@@ -28,7 +28,7 @@
                         <img src="/img/logo_nuevo.png" class="mb-4 mt-2" alt="">
                         <h1>Plataforma #1 de Checklist Inteligentes</h1>
                         <p>Es hora de hacer checklist realmente funcionales, que te permitan ser más productivo y a su vez tener todo más organizado.</p>
-                        <a href="/comingsoon" class="btn btn-secondary">Crear cuenta</a>
+                        <a href="/users/signup" class="btn btn-secondary">Crear cuenta</a>
                         <h6>Siempre libre. Configurar en minutos. No se requiere tarjeta de crédito.</h6>
                     </div>
                     <div class="col-md-6">
@@ -58,7 +58,7 @@
                             <img src="/img/check_b.png" alt="">
                             <span><b>Programar automáticamente</b>Recibe alertas! no te quedes sin realizar ninguna tarea</span>
                         </li>
-                        <a href="/comingsoon" class="btn btn-secondary">Crear cuenta</a>
+                        <a href="/users/signup" class="btn btn-secondary">Crear cuenta</a>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1>De uso gratuito durante el tiempo que desees</h1>
-                        <a href="/comingsoon" class="btn btn-secondary">Crear cuenta</a>
+                        <a href="/users/signup" class="btn btn-secondary">Crear cuenta</a>
                         <h6>Siempre libre. Configurar en minutos. No se requiere tarjeta de crédito.</h6>
                     </div>
                 </div>
@@ -101,32 +101,32 @@
                         <a href="/"><img src="/img/logo_nuevo.png" alt=""></a>
                     </div>
                     <div class="col-md-3">
-                        <li><a href="javascript:void(0)">Precios</a></li>
-                        <li><a href="javascript:void(0)">Blog</a></li>
-                        <li><a href="javascript:void(0)">Más</a></li>
-                        <li><a href="/comingsoon">Ingresar</a></li>
-                        <li><a href="/comingsoon">Crear cuenta</a></li>
+                        <li><a href="/comingsoon">Precios</a></li>
+                        <li><a href="/comingsoon">Blog</a></li>
+                        <li><a href="/comingsoon">Más</a></li>
+                        <li><a href="/users/signin">Ingresar</a></li>
+                        <li><a href="/users/signup">Crear cuenta</a></li>
                     </div>
                     <div class="col-md-3">
                         <h5>Características</h5>
-                        <li><a href="javascript:void(0)">Link 1</a></li>
-                        <li><a href="javascript:void(0)">Link 2</a></li>
-                        <li><a href="javascript:void(0)">Link 3</a></li>
-                        <li><a href="javascript:void(0)">Link 4</a></li>
-                        <li><a href="javascript:void(0)">Link 5</a></li>
-                        <li><a href="javascript:void(0)">Link 6</a></li>
-                        <li><a href="javascript:void(0)">Link 7</a></li>
-                        <li><a href="javascript:void(0)">Link 8</a></li>
+                        <li><a href="/comingsoon">Link 1</a></li>
+                        <li><a href="/comingsoon">Link 2</a></li>
+                        <li><a href="/comingsoon">Link 3</a></li>
+                        <li><a href="/comingsoon">Link 4</a></li>
+                        <li><a href="/comingsoon">Link 5</a></li>
+                        <li><a href="/comingsoon">Link 6</a></li>
+                        <li><a href="/comingsoon">Link 7</a></li>
+                        <li><a href="/comingsoon">Link 8</a></li>
                     </div>
                     <div class="col-md-3">
                         <h5>Guías</h5>
-                        <li><a href="javascript:void(0)">Link 1</a></li>
-                        <li><a href="javascript:void(0)">Link 2</a></li>
-                        <li><a href="javascript:void(0)">Link 3</a></li>
-                        <li><a href="javascript:void(0)">Link 4</a></li>
-                        <li><a href="javascript:void(0)">Link 5</a></li>
-                        <li><a href="javascript:void(0)">Link 6</a></li>
-                        <li><a href="javascript:void(0)">Link 7</a></li>
+                        <li><a href="/comingsoon">Link 1</a></li>
+                        <li><a href="/comingsoon">Link 2</a></li>
+                        <li><a href="/comingsoon">Link 3</a></li>
+                        <li><a href="/comingsoon">Link 4</a></li>
+                        <li><a href="/comingsoon">Link 5</a></li>
+                        <li><a href="/comingsoon">Link 6</a></li>
+                        <li><a href="/comingsoon">Link 7</a></li>
                     </div>
                     <div class="col-md-3">
                         <h5>Alianzas</h5>
@@ -134,8 +134,8 @@
                     </div>
                     <div class="col-md-12">
                         <ul>
-                            <li><a href="javascript:void(0)">Términos y Condiciones</a></li>
-                            <li><a href="javascript:void(0)">Políticas de Privacidad</a></li>
+                            <li><a href="/comingsoon">Términos y Condiciones</a></li>
+                            <li><a href="/comingsoon">Políticas de Privacidad</a></li>
                         </ul>
                         <ul>
                             <a href="https://www.instagram.com/" target="_blank"><img src="/icons/instagram.svg" alt=""></a>
