--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -12,6 +12,7 @@ body {
     padding: 14px 28px;
     letter-spacing: 0.5px;
     font-size: 17px;
+    border-radius: 0.8rem;
 }
 .btn-secondary:not(:disabled):not(.disabled).active:focus, .btn-secondary:not(:disabled):not(.disabled):active:focus, .show>.btn-secondary.dropdown-toggle:focus {
     box-shadow: 0 0 0 0rem rgba(130,138,145,.5);
@@ -25,7 +26,7 @@ body {
     background-color: #94c314;
     border-color: #94c314;
 }
-.btn-secondary:hover {
+.btn-primary:hover, .btn-secondary:hover {
     background-color: #94c314;
     border-color: #94c314;
 }
@@ -48,6 +49,130 @@ body {
 .card {
     border-radius: 0.8rem;
     border: 1px solid #e6e6e6;
+}
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-clip: padding-box;
+    background-color: #e6e6e6;
+    height: calc(1.5em + .75rem + 3px);
+    margin-bottom: 1.5rem;
+    font-size: 0.875rem;
+    border: none;
+    border-radius: 0.8rem;
+    background-color: #ededed;
+    transition: all 0.2s;
+}
+.form-control:focus {
+    color: #495057;
+    background-color: #e6e6e6;
+    box-shadow: 0 0 0 0rem rgba(0,123,255,.25);
+}
+.form-control:hover {
+    background-color: #e6e6e6;
+}
+.custom-control-label::after {
+    top: .2rem;
+}
+.custom-control-label::before {
+    top: 0.2rem;
+}
+a {
+    color: #798892;
+}
+a:hover {
+    color: #1f83fe;
+    text-decoration: underline;
+}
+.btn-primary {
+    background-color: #addb31;
+    border-color: #addb31;
+    border-radius: 0.8rem;
+}
+hr {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border-top: 1px solid #e6e6e6;
+}
+.btn-primary.focus, .btn-primary:focus {
+    box-shadow: 0 0 0 0rem rgba(38,143,255,.5);
+}
+.btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus, .show>.btn-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0rem rgba(38,143,255,.5);
+    background-color: #94c314;
+    border-color: #94c314;
+}
+.btn.btn-floating {
+    height: 35px;
+    width: 35px;
+    padding: 5px 0 0;
+    border-radius: 50%;
+}
+.btn.btn-facebook {
+    background: #3b5998 !important;
+    border-color: #3b5998 !important;
+    cursor: pointer;
+    color: white;
+}
+.btn.btn-facebook:not(:disabled):not(.disabled):focus {
+    box-shadow: 0 0 0 0.2rem rgba(59, 89, 152, 0.4) !important;
+}
+.btn.btn-twitter {
+    background: #55acee !important;
+    border-color: #55acee !important;
+    cursor: pointer;
+    color: white;
+}
+.btn.btn-twitter:not(:disabled):not(.disabled):focus {
+    box-shadow: 0 0 0 0.2rem rgba(85, 172, 238, 0.4) !important;
+}
+.btn.btn-dribbble {
+    background: #ea4c89 !important;
+    border-color: #ea4c89 !important;
+    cursor: pointer;
+    color: white;
+}
+.btn.btn-dribbble:not(:disabled):not(.disabled):focus {
+    box-shadow: 0 0 0 0.2rem rgba(234, 76, 137, 0.4) !important;
+}
+.btn.btn-linkedin {
+    background: #0077b5 !important;
+    border-color: #0077b5 !important;
+    cursor: pointer;
+    color: white;
+}
+.btn.btn-linkedin:not(:disabled):not(.disabled):focus {
+    box-shadow: 0 0 0 0.2rem rgba(0, 119, 181, 0.4) !important;
+}
+.btn.btn-google {
+    background: #db4437 !important;
+    border-color: #db4437 !important;
+    cursor: pointer;
+    color: white;
+}
+.btn.btn-google:not(:disabled):not(.disabled):focus {
+    box-shadow: 0 0 0 0.2rem rgba(219, 68, 55, 0.4) !important;
+}
+.btn-outline-light {
+    background: none;
+    border-color: #d6d6d6;
+    border-radius: 0.8rem;
+    border-width: 1px;
+    color: #212529;
+}
+.btn.btn-outline-light:not(:disabled):not(.disabled):hover {
+    background: #d6d6d6;
+    border-color: #d6d6d6;
+    color: white;
+}
+.btn-outline-light.focus, .btn-outline-light:focus {
+    box-shadow: 0 0 0 0rem rgba(248,249,250,.5);
 }
 
 /* LANDING */
@@ -242,6 +367,30 @@ body {
     height: 21px;
 }
 
+/* SIGN IN - SIGN UP */
+.fondo_relative { 
+    width: 100%;
+    height: 100%;
+    position: relative;
+    padding: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-repeat: no-repeat;
+    background-image: url(/img/img--lp__wave--shorten-6fbabeff.png);
+    background-size: cover;
+}
+.fondo_relative .card { 
+    width: 400px;
+}
+.fondo_relative .card-body {
+    text-align: center;
+    padding: 3rem;
+}
+.fondo_relative .card-body img {
+    height: 40px;
+}
+
 /* VIEW COMMINGSOON */
 .fondo_fixed { 
     width: 100%;
@@ -258,6 +407,7 @@ body {
 }
 .fondo_fixed .card-body {
     text-align: center;
+    padding: 3rem;
 }
 .fondo_fixed .card-body img {
     height: 50px;
