--- a/src/views/partials/head.html
+++ b/src/views/partials/head.html
@@ -1,6 +1,6 @@
 <meta name="description" content="Es hora de hacer checklist realmente funcionales, que te permitan ser más productivo y a su vez tener todo más organizado.">
 <!-- Google Fonts -->
-<!-- <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet"> -->
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon-192x192.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-192x192.png">
