CRUD MongoDB y Ajax Jquery

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,7 +16,7 @@
                         <li><a href="/comingsoon">Precios</a></li>
                         <li><a href="/comingsoon">Blog</a></li>
                         <li><a href="/comingsoon">Más</a></li>
-                        <li><a href="/users/signin">Ingresar</a></li>
+                        <li><a href="/signin">Ingresar</a></li>
                     </ul>
                 </div>
             </div>
@@ -28,7 +28,7 @@
                         <img src="/img/logo_nuevo.png" class="mb-4 mt-2" alt="">
                         <h1>Plataforma #1 de Checklist Inteligentes</h1>
                         <p>Es hora de hacer checklist realmente funcionales, que te permitan ser más productivo y a su vez tener todo más organizado.</p>
-                        <a href="/users/signup" class="btn btn-secondary">Crear cuenta</a>
+                        <a href="/signup" class="btn btn-secondary">Crear cuenta</a>
                         <h6>Siempre libre. Configurar en minutos. No se requiere tarjeta de crédito.</h6>
                     </div>
                     <div class="col-md-6">
@@ -58,7 +58,7 @@
                             <img src="/img/check_b.png" alt="">
                             <span><b>Programar automáticamente</b>Recibe alertas! no te quedes sin realizar ninguna tarea</span>
                         </li>
-                        <a href="/users/signup" class="btn btn-secondary">Crear cuenta</a>
+                        <a href="/signup" class="btn btn-secondary">Crear cuenta</a>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1>De uso gratuito durante el tiempo que desees</h1>
-                        <a href="/users/signup" class="btn btn-secondary">Crear cuenta</a>
+                        <a href="/signup" class="btn btn-secondary">Crear cuenta</a>
                         <h6>Siempre libre. Configurar en minutos. No se requiere tarjeta de crédito.</h6>
                     </div>
                 </div>
@@ -104,8 +104,8 @@
                         <li><a href="/comingsoon">Precios</a></li>
                         <li><a href="/comingsoon">Blog</a></li>
                         <li><a href="/comingsoon">Más</a></li>
-                        <li><a href="/users/signin">Ingresar</a></li>
-                        <li><a href="/users/signup">Crear cuenta</a></li>
+                        <li><a href="/signin">Ingresar</a></li>
+                        <li><a href="/signup">Crear cuenta</a></li>
                     </div>
                     <div class="col-md-3">
                         <h5>Características</h5>
